[package]
name = "objc-rs"
version = "0.3.1"
authors = ["Steven Sheldon", "Raphael Amorim"]

description = "Objective-C Runtime bindings and wrapper for Rust. Maintained fork of objc crate"
keywords = ["objective-c", "osx", "ios", "cocoa", "uikit"]
readme = "README.md"
repository = "https://github.com/raphamorim/objc-rs"
documentation = "https://github.com/raphamorim/objc-rs"
license = "MIT"
edition = "2024"

exclude = [
  ".gitignore",
  ".travis.yml",
  "doc.sh",
  "travis_install.sh",
  "travis_test.sh",
  "tests-ios/**",
 ]

[features]
exception = ["objc_exception"]
verify_message = []

[dependencies]
malloc_buf = "1.0"

[dependencies.objc_exception]
version = "0.1.2"
optional = true
